[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["Kristian Marlowe Ole <krismar.ole@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
sqlalchemy = "^2.0.32"
requests = "^2.32.3"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"